重构熵管道网络：支持面模式与定向传输，新增吞吐量控制
- BEEntropyPipe：新增每面模式（NONE/EXTRACT/OUTPUT）与吞吐量乘数，支持 NBT 持久化及网络端点动态刷新
- BlockEntropyPipe：接入自定义几何加载器，连接判断增加流体能力检查，复用 CableBakedModel 并统一 CONNECTIONS 属性
- EntropyPipeNet：重构为基于端点的定向传输模型，引入抽取/输出预算、轮询游标与速率控制（BASE_RATE/MAX_RATE），移除旧均分逻辑及 BFS 工具方法
- PipeNetManager：适配带 level 的构造函数，使用 memberComponents 简化分裂检测，新增邻居快速检查
- ChrononNetwork：修正反序列化列表标签类型为 TAG_INT_ARRAY
- ChrononNetworkData：修复 load 返回错误实例的问题